<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cifras Play</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="maior_velocidade">Maior Velocidade</string>
    <string name="menor_velocidade">Menor Velocidade</string>
    <string name="maior_fonte">Aumentar Fonte</string>
    <string name="menor_fonte">Diminuir Fonte</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="title_activity_splash_screen">Cifras Play</string>
    <string name="title_activity_menu_principal">Cifras Play</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="tocar">Tocar</string>
    <string name="afinador">Afinar</string>
    <string name="playlist">Playlist</string>
    <string name="title_activity_pesquisar">Pesquisa</string>
    <string name="title_activity_tocar">Tocar</string>
    <string name="btnTocar">Tocar</string>
    <string name="pesquisa_prompt">O que deseja pesquisar?</string>
    <string name="musicas_disp">Músicas Disponíveis</string>

    <string-array name="pesquisa">
        <item>Música</item>
        <item>Artista</item>
    </string-array>

    <string name="title_activity_cp__configuracao">Configuracao</string>
    <string name="title_activity_musica_teste">MusicaTeste</string>
    <string name="title_activity_configuracao">Configuração</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_configura">Configura</string>

</resources>